# SyncDo

./: .gitignore  README.md
backend/: auth.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  tasks.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AuthSuccess.jsx  Dashboard.jsx  Login.jsx
frontend/tests/: README.md  e2e.spec.js  todo_suite.spec.js
